# simple

./: CMakeLists.txt  README.md
macros/: error.h  memory.h
types/: error.h  string.c  string.h  string_slice.h
