cmake_minimum_required(VERSION 3.18)

project(
    simple
    LANGUAGES C
    VERSION 0.0.1
)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set(TYPES_DIR ${CMAKE_CURRENT_SOURCE_DIR}/types)
set(MACROS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/macros)

file(GLOB_RECURSE TYPES_SRCS ${TYPES_DIR}/*.c)
file(GLOB_RECURSE MACROS_SRCS ${MACROS_DIR}/*.c)

set(LIB_NAME ${PROJECT_NAME})
add_library(
    ${LIB_NAME} STATIC
    ${TYPES_SRCS} ${MACROS_SRCS}
)

target_include_directories(
    ${LIB_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}
)
